# infrastructure/http/src/main/java/br/com/liftrecord/account/RegisterAccountControllerMapper.java
@@ -29,6 +29,7 @@ public class RegisterAccountControllerMapper {
       assert account.getContact().getCellphone() != null;
       assert account.getStatus() != null;
       return new RegisterAccountResponseDto()
+          .accountId(account.getId().getValue())
           .name(account.getName())
           .email(account.getContact().getEmail().getValue())
           .cellphone(account.getContact().getCellphone().getFullNumber())
